Add profile for development